tests/errors/affectation_type.yaka
PROGRAMME declar
PRINCIPAL
VAR ENTIER x,y;
VAR BOOLEEN z;
x=y+3*y-4;
z=(x+y/2)/5;
FPRINCIPAL
FPROGRAMME
